Refactored db access into new TransferTaskDatabaseService to clean up the code access and ensure we don't run into ordering issues. Updated TransferCompleteTaskListener to roll the completed event up through all parents. Reorganized configs and sql into cleaner abstractions so the code is more readable. Updated the transfers-api pom to include the junit5 library and annotation processing for service proxy generation. Updated the project parent pom to remove the testng inclusion as a global dependency Fixed bug in src/main/java/org/iplantc/service/io/dao/QueueTaskDao where the class was referencing a non-existent service.