@@ -111,8 +111,8 @@
         <maven-php-plugin.version>2.0.2</maven-php-plugin.version>
         <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
         <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
         <maven-war-plugin.version>3.2.3</maven-war-plugin.version>
         <org.eclipse.m2e.lifecycle-mapping.version>1.0.0</org.eclipse.m2e.lifecycle-mapping.version>
 
@@ -319,9 +319,12 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
                         <skipTests>${skip.unit.tests}</skipTests>
-                        <groups>unit</groups>
-                        <excludedGroups>broken,notReady</excludedGroups>
+<!--                        <groups>unit</groups>-->
+<!--                        <excludedGroups>broken,notReady</excludedGroups>-->
                         <systemPropertyVariables>
                             <log4j.configuration>file:${basedir}/src/test/resources/log4j.properties
                             </log4j.configuration>
@@ -425,6 +428,9 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
                     <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
                         <skipTests>${skip.integration.tests}</skipTests>
                         <groups>integration</groups>
                         <excludedGroups>broken,notReady</excludedGroups>
@@ -540,15 +546,14 @@
     <!--                   Global Dependencies                        -->
     <!--                                                              -->
     <!-- Only add dependencies here that are used by EVERY submodule. -->
-    <dependencies>
-        <dependency>
-            <!-- There are non-test compile dependencies on testng -->
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>org.testng</groupId>-->
+<!--            <artifactId>testng</artifactId>-->
+<!--            <version>${testng.version}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
 
     <modules>
         <module>agave-migrations</module>
